@@ -5,6 +5,8 @@ version 0.9.7 -- UNRELEASED
 	 . add 'when = manual' option, that can be used in the global config
 	   file or in a given backup action file. Thanks Tuomas Jormola for the
 	   preliminary patch (Closes: #511299)
+	 . new reportinfo option: when set, messages sent by handlers with
+	   "info" are included in the report e-mail (closes #563734)
     lib changes
 	easydialog:
 	 . Allow form fields input to grow up to 100 chars (Closes: #562249)
